Three_i | Free COLOR CODE GENERATOR

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./assets/css/style.css">
     <!-- Custom CSS File -->
 
-    <title> Three_i | Free Color Code Generaot</title>
+    <title> Three_i | Free Color Code Generator</title>
 </head>
 <body onload="alertFunction ()">
 
